--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -14,7 +14,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "branch "
+   ]
   },
   {
    "cell_type": "code",
