--- a/src/Demandable.ipynb
+++ b/src/Demandable.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Demandable():\n",
+    "class Demandable:\n",
     "    def __init__(self, holding_cost):\n",
     "        self.inv_level = [] ## Each item has multiple inv level\n",
     "        self.upstream = [] ## Each upstream Demandables\n",
@@ -19,13 +19,14 @@
     "            self.inv_level[i] += demandable.getItems(num_demands)\n",
     "\n",
     "    def getItems(self, num_get: int) -> int:\n",
-    "        items_out = min(num_get, inv_level)\n",
-    "        self.inv_level -= items_out\n",
+    "        items_out = min(num_get, min(self.inv_level))\n",
+    "        for i in range(len(self.inv_level)):\n",
+    "            self.inv_level[i] -= items_out\n",
     "        return items_out\n",
     "    \n",
-    "    def addUpstream(self, demandable: Demandable) -> None:\n",
+    "    def addUpstream(self, demandable : \"Demandable\") -> None:\n",
     "        self.upstream.append(demandable)\n",
-    "        self.upstream.append(50000) #Change later, perhaps random starting inventory\n",
+    "        self.inv_level.append(50000) #Change later, perhaps random starting inventory\n",
     "    \n",
     "    def getHoldingCost(self) -> int:\n",
     "        return sum(self.inv_level) * self.holding_cost\n",
@@ -36,6 +37,22 @@
     "            total += demandable.getTotalHoldingCost()\n",
     "        return total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" a = Demandable(100)\n",
+    "b = Demandable(200)\n",
+    "a.addUpstream(b)\n",
+    "sum([])\n",
+    "a.getTotalHoldingCost()\n",
+    "a.getItems(100)\n",
+    "\n",
+    " \"\"\""
+   ]
   }
  ],
  "metadata": {
@@ -45,7 +62,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4
