--- a/src/Demandable.ipynb
+++ b/src/Demandable.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Demandable:\n",
     "    def __init__(self, holding_cost):\n",
-    "        self.inv_level = [] ## Each item has multiple inv level\n",
+    "        self.inv_level = {} ## Each item has multiple inv level\n",
     "        self.upstream = [] ## Each upstream Demandables\n",
     "        self.holding_cost = holding_cost ## Possibly change for each item\n",
     "        \n",
@@ -18,23 +18,23 @@
     "            demandable = self.upstream[i]\n",
     "            self.inv_level[i] += demandable.getItems(num_demands)\n",
     "\n",
-    "    def getItems(self, num_get: int) -> int:\n",
+    "    def get_items(self, num_get: int) -> int:\n",
     "        items_out = min(num_get, min(self.inv_level))\n",
     "        for i in range(len(self.inv_level)):\n",
     "            self.inv_level[i] -= items_out\n",
     "        return items_out\n",
     "    \n",
-    "    def addUpstream(self, demandable : \"Demandable\") -> None:\n",
+    "    def add_upstream(self, demandable : \"Demandable\") -> None:\n",
     "        self.upstream.append(demandable)\n",
     "        self.inv_level.append(50000) #Change later, perhaps random starting inventory\n",
     "    \n",
-    "    def getHoldingCost(self) -> int:\n",
+    "    def get_hc(self) -> int:\n",
     "        return sum(self.inv_level) * self.holding_cost\n",
     "    \n",
-    "    def getTotalHoldingCost(self) -> int: #Get all holding cost upstream\n",
-    "        total = self.getHoldingCost()\n",
+    "    def get_totalhc(self) -> int: #Get all holding cost upstream\n",
+    "        total = self.get_hc()\n",
     "        for demandable in self.upstream:\n",
-    "            total += demandable.getTotalHoldingCost()\n",
+    "            total += demandable.get_totalhc()\n",
     "        return total"
    ]
   },
