--- a/src/ML.ipynb
+++ b/src/ML.ipynb
@@ -151,7 +151,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv(\".6_24months_mldata.csv\")\n",
+    "# data = pd.read_csv(\"./72_onlinemldata.csv\")\n",
+    "# data = pd.read_csv(\"./144_mldata.csv.csv\")\n",
+    "\n",
+    "\n",
+    "#code adapted from https://machinelearningmastery.com/building-a-regression-model-in-pytorch/\n",
+    "target_df = data['profit']\n",
+    "target = torch.tensor(target_df)\n",
+    "predictors = torch.tensor(data.drop(['profit'], axis=1).to_numpy(dtype=np.float64))\n",
+    "X_train_raw, X_test_raw, y_train, y_test = train_test_split(predictors, target, test_size=0.33, random_state=42)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train_raw)\n",
+    "X_train = scaler.transform(X_train_raw)\n",
+    "X_test = scaler.transform(X_test_raw)\n",
+    "n_cols = predictors.shape[1]\n",
+    " \n",
+    "\n",
+    "# Convert to 2D PyTorch tensors\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32).reshape(-1, 1)\n",
+    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32).reshape(-1, 1)\n",
+    " \n",
+    "# Define the model\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(n_cols, 800),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(800, 400),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(400, 200),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(200, 1)\n",
+    ")\n",
+    "# for param in model.parameters():\n",
+    "#     param.requires_grad = True\n",
+    "# loss function and optimizer\n",
+    "# loss_fn = nn.L1Loss()  # mean square error\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    " \n",
+    "n_epochs = 2000   # number of epochs to run\n",
+    "batch_size = 10  # size of each batch\n",
+    "batch_start = torch.arange(0, len(X_train), batch_size)\n",
+    " \n",
+    "# Hold the best model\n",
+    "best_mse = np.inf   # init to infinity\n",
+    "best_weights = None\n",
+    "history = []\n",
+    " \n",
+    "for epoch in range(n_epochs):\n",
+    "    print(epoch)\n",
+    "    model.train()\n",
+    "    with tqdm.tqdm(batch_start, unit=\"batch\", mininterval=0, disable=True) as bar:\n",
+    "        bar.set_description(f\"Epoch {epoch}\")\n",
+    "        for start in bar:\n",
+    "            # take a batch\n",
+    "            X_batch = X_train[start:start+batch_size]\n",
+    "            y_batch = y_train[start:start+batch_size]\n",
+    "            # forward pass\n",
+    "            y_pred = model(X_batch)\n",
+    "            loss = loss_fn(y_pred, y_batch)\n",
+    "            # backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            # update weights\n",
+    "            optimizer.step()\n",
+    "            # print progress\n",
+    "            bar.set_postfix(mse=float(loss))\n",
+    "    # evaluate accuracy at end of each epoch\n",
+    "    model.eval()\n",
+    "    y_pred = model(X_test)\n",
+    "    mse = loss_fn(y_pred, y_test)\n",
+    "    mse = float(mse)\n",
+    "    history.append(mse)\n",
+    "    if mse < best_mse:\n",
+    "        best_mse = mse\n",
+    "        best_weights = copy.deepcopy(model.state_dict())\n",
+    "\n",
+    "# restore model and return best accuracy\n",
+    "model.load_state_dict(best_weights)\n",
+    "new_pred = model(X_test)\n",
+    "print(new_pred)\n",
+    "print(\"MSE: %.2f\" % best_mse)\n",
+    "print(\"RMSE: %.2f\" % np.sqrt(best_mse))\n",
+    "plt.plot(history)\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -170,8 +257,91 @@
     }
    ],
    "source": [
-    "import os\n",
-    "os.getcwd()"
+    "data = pd.read_csv(\"./72_onlinemldata.csv\")\n",
+    "# data = pd.read_csv(\"./144_mldata.csv.csv\")\n",
+    "\n",
+    "\n",
+    "#code adapted from https://machinelearningmastery.com/building-a-regression-model-in-pytorch/\n",
+    "target_df = data['profit']\n",
+    "target = torch.tensor(target_df)\n",
+    "predictors = torch.tensor(data.drop(['profit'], axis=1).to_numpy(dtype=np.float64))\n",
+    "X_train_raw, X_test_raw, y_train, y_test = train_test_split(predictors, target, test_size=0.33, random_state=42)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train_raw)\n",
+    "X_train = scaler.transform(X_train_raw)\n",
+    "X_test = scaler.transform(X_test_raw)\n",
+    "n_cols = predictors.shape[1]\n",
+    " \n",
+    "\n",
+    "# Convert to 2D PyTorch tensors\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32).reshape(-1, 1)\n",
+    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32).reshape(-1, 1)\n",
+    " \n",
+    "# Define the model\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(n_cols, 800),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(800, 400),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(400, 200),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(200, 1)\n",
+    ")\n",
+    "# for param in model.parameters():\n",
+    "#     param.requires_grad = True\n",
+    "# loss function and optimizer\n",
+    "# loss_fn = nn.L1Loss()  # mean square error\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    " \n",
+    "n_epochs = 2000   # number of epochs to run\n",
+    "batch_size = 10  # size of each batch\n",
+    "batch_start = torch.arange(0, len(X_train), batch_size)\n",
+    " \n",
+    "# Hold the best model\n",
+    "best_mse = np.inf   # init to infinity\n",
+    "best_weights = None\n",
+    "history = []\n",
+    " \n",
+    "for epoch in range(n_epochs):\n",
+    "    print(epoch)\n",
+    "    model.train()\n",
+    "    with tqdm.tqdm(batch_start, unit=\"batch\", mininterval=0, disable=True) as bar:\n",
+    "        bar.set_description(f\"Epoch {epoch}\")\n",
+    "        for start in bar:\n",
+    "            # take a batch\n",
+    "            X_batch = X_train[start:start+batch_size]\n",
+    "            y_batch = y_train[start:start+batch_size]\n",
+    "            # forward pass\n",
+    "            y_pred = model(X_batch)\n",
+    "            loss = loss_fn(y_pred, y_batch)\n",
+    "            # backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            # update weights\n",
+    "            optimizer.step()\n",
+    "            # print progress\n",
+    "            bar.set_postfix(mse=float(loss))\n",
+    "    # evaluate accuracy at end of each epoch\n",
+    "    model.eval()\n",
+    "    y_pred = model(X_test)\n",
+    "    mse = loss_fn(y_pred, y_test)\n",
+    "    mse = float(mse)\n",
+    "    history.append(mse)\n",
+    "    if mse < best_mse:\n",
+    "        best_mse = mse\n",
+    "        best_weights = copy.deepcopy(model.state_dict())\n",
+    "\n",
+    "# restore model and return best accuracy\n",
+    "model.load_state_dict(best_weights)\n",
+    "new_pred = model(X_test)\n",
+    "print(new_pred)\n",
+    "print(\"MSE: %.2f\" % best_mse)\n",
+    "print(\"RMSE: %.2f\" % np.sqrt(best_mse))\n",
+    "plt.plot(history)\n",
+    "plt.show()"
    ]
   },
   {
@@ -179,7 +349,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv(\"./144_mldata.csv.csv\")\n",
+    "\n",
+    "\n",
+    "#code adapted from https://machinelearningmastery.com/building-a-regression-model-in-pytorch/\n",
+    "target_df = data['profit']\n",
+    "target = torch.tensor(target_df)\n",
+    "predictors = torch.tensor(data.drop(['profit'], axis=1).to_numpy(dtype=np.float64))\n",
+    "X_train_raw, X_test_raw, y_train, y_test = train_test_split(predictors, target, test_size=0.33, random_state=42)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train_raw)\n",
+    "X_train = scaler.transform(X_train_raw)\n",
+    "X_test = scaler.transform(X_test_raw)\n",
+    "n_cols = predictors.shape[1]\n",
+    " \n",
+    "\n",
+    "# Convert to 2D PyTorch tensors\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32).reshape(-1, 1)\n",
+    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32).reshape(-1, 1)\n",
+    " \n",
+    "# Define the model\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(n_cols, 800),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(800, 400),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(400, 200),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(200, 1)\n",
+    ")\n",
+    "# for param in model.parameters():\n",
+    "#     param.requires_grad = True\n",
+    "# loss function and optimizer\n",
+    "# loss_fn = nn.L1Loss()  # mean square error\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    " \n",
+    "n_epochs = 2000   # number of epochs to run\n",
+    "batch_size = 10  # size of each batch\n",
+    "batch_start = torch.arange(0, len(X_train), batch_size)\n",
+    " \n",
+    "# Hold the best model\n",
+    "best_mse = np.inf   # init to infinity\n",
+    "best_weights = None\n",
+    "history = []\n",
+    " \n",
+    "for epoch in range(n_epochs):\n",
+    "    print(epoch)\n",
+    "    model.train()\n",
+    "    with tqdm.tqdm(batch_start, unit=\"batch\", mininterval=0, disable=True) as bar:\n",
+    "        bar.set_description(f\"Epoch {epoch}\")\n",
+    "        for start in bar:\n",
+    "            # take a batch\n",
+    "            X_batch = X_train[start:start+batch_size]\n",
+    "            y_batch = y_train[start:start+batch_size]\n",
+    "            # forward pass\n",
+    "            y_pred = model(X_batch)\n",
+    "            loss = loss_fn(y_pred, y_batch)\n",
+    "            # backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            # update weights\n",
+    "            optimizer.step()\n",
+    "            # print progress\n",
+    "            bar.set_postfix(mse=float(loss))\n",
+    "    # evaluate accuracy at end of each epoch\n",
+    "    model.eval()\n",
+    "    y_pred = model(X_test)\n",
+    "    mse = loss_fn(y_pred, y_test)\n",
+    "    mse = float(mse)\n",
+    "    history.append(mse)\n",
+    "    if mse < best_mse:\n",
+    "        best_mse = mse\n",
+    "        best_weights = copy.deepcopy(model.state_dict())\n",
+    "\n",
+    "# restore model and return best accuracy\n",
+    "model.load_state_dict(best_weights)\n",
+    "new_pred = model(X_test)\n",
+    "print(new_pred)\n",
+    "print(\"MSE: %.2f\" % best_mse)\n",
+    "print(\"RMSE: %.2f\" % np.sqrt(best_mse))\n",
+    "plt.plot(history)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
