Redid functionalities in RLsrc

--- a/src/Test_GeneticAlgo.ipynb
+++ b/src/Test_GeneticAlgo.ipynb
@@ -29,7 +29,10 @@
     "                   'crossover_type':'uniform',\\\n",
     "                   'max_iteration_without_improv':300}\n",
     "\n",
-    "varbound=np.array([[120, 200],[20,80], [120, 200], [20,80], [120, 200], [20,80], [120, 200]])\n",
+    "df = pd.read_csv(\"./TOTALSA.csv\")\n",
+    "mean = df['TOTALSA'].mean()\n",
+    "std = df['TOTALSA'].std()\n",
+    "varbound=np.array([[round(mean * 2), round(mean * 10)]]*7)\n",
     "\n",
     "def objective_no_season(X):\n",
     "    return -1 * Genetic_Algo_No_Season(X) #7 parameters\n",
