--- a/src/Test_Bayesian_Optimisation.ipynb
+++ b/src/Test_Bayesian_Optimisation.ipynb
@@ -1012,6 +1012,7 @@
     "    random_state=0,\n",
     "    allow_duplicate_points=True\n",
     ")\n",
+    "optimizer.set_gp_params(alpha=1e-3, n_restarts_optimizer=5)\n",
     "\n",
     "optimizer.maximize(\n",
     "    init_points = 100,\n",
